# claude-ai-rust

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  audit.toml  clippy.toml  deny.toml  docker-compose.yml  rustfmt.toml
.claude/: settings.local.json
.claude/agents/: code-reviewer.md  devops-engineer.md  docker-expert.md  kubernetes-specialist.md  rust-architect.md  rust-web-engineer.md  security-engineer.md  test-automator.md
.claude/skills/: README.md  skills.json
.claude/skills/api-contract-review/: SKILL.md
.claude/skills/clean-code/: SKILL.md
.claude/skills/grpc-patterns/: SKILL.md
.claude/skills/rust-architect/: SKILL.md
.claude/skills/rust-architect/references/: async-patterns.md  error-handling.md  rust-setup.md  security.md  testing-patterns.md  worker-patterns.md
.claude/skills/rust-code-review/: SKILL.md
.claude/skills/rust-patterns/: SKILL.md
.claude/skills/rust-web-engineer/: SKILL.md
.claude/skills/rust-web-engineer/references/: auth.md  cloud.md  data.md  testing.md  web.md
.claude/skills/rust-web-patterns/: SKILL.md
.claude/skills/sqlx-patterns/: SKILL.md
.claude/skills/tracing-patterns/: SKILL.md
.github/workflows/: ci.yml
migrations/: .gitkeep
src/: main.rs
