[package]
name = "placeholder"
version = "0.1.0"
edition = "2021"

# Replace "placeholder" with the name of your project (snake_case, matches directory name).
# Run: cargo init --name <your_project_name>

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Web framework
axum = { version = "0.8", features = ["macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "compression-gzip"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono", "migrate"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Tracing / logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
validator = { version = "0.19", features = ["derive"] }

[dev-dependencies]
tokio-test = "0.4"
axum-test = "17"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres"] }
